# JsonType

./: .clang-format  .gitignore  .packit.yaml  .pre-commit-config.yaml  CMakeLists.txt  Changelog.md  LICENSE  README.md  pyproject.toml  qodana.yaml
.distro/: json-type.rpmlintrc  json-type.spec
.distro/plans/: ctest.fmf
.github/workflows/: prepare_release.yaml  release.yaml  step_coverage.yaml  step_docs.yaml  step_test.yaml
cmake/: CMakePresets-CI.json  JsonTypeConfig.cmake.in  JsonType_test.cmake
docs/: conf.py  index.md
src/: CMakeLists.txt  json_type.cpp  json_type.hpp
test/: CMakeLists.txt  ctest.fmf  test.sh
test/package/: CMakeLists.txt  common.cmake  main.cpp
test/package/FetchContent/: CMakeLists.txt
test/package/find_package/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_json_type.cpp
